# geese

./: .gitignore  pyproject.toml  sms.py
.cursor/rules/: python-style.mdc
servers/: context.py  sms.py  wiki.py
src/geese/: _decorators.py
