[project]
name = "geese"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lancedb>=0.18.0",
    "marvin",
    "mcp[cli]>=1.2.1",
    "trafilatura>=2.0.0",
    "prefect>=3.1.15",
]

[project.optional-dependencies]
dev = ["ruff>=0.9", "ipython>=8.0"]

[tool.uv.sources]
marvin = { git = "https://github.com/prefecthq/marvin.git" }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint]
extend-select = ["I", "UP"]
